# pkg/client/openapi.yaml
@@ -475,6 +475,9 @@ components:
           type: string
         source_conversation_id:
           type: string
+        source_id:
+          format: int64
+          type: integer
         source_message_id:
           type: string
         subject:
@@ -1315,6 +1318,9 @@ components:
           type: integer
         snippet:
           type: string
+        source_id:
+          format: int64
+          type: integer
         source_message_id:
           type: string
         subject:
@@ -1492,6 +1498,9 @@ components:
           type: integer
         snippet:
           type: string
+        source_id:
+          format: int64
+          type: integer
         source_message_id:
           type: string
         subject:
@@ -1580,6 +1589,9 @@ components:
           type: integer
         snippet:
           type: string
+        source_id:
+          format: int64
+          type: integer
         source_message_id:
           type: string
         subject:
